FIX sap.ui.table.Table was broken in dialogs with ObjectPageLaout

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -129,6 +129,7 @@ html.sap-tablet .sapMDialog, html.sap-desktop .sapMDialog {min-width: 25rem !imp
 .sapUxAPObjectPageSection.sapUiNoContentPadding .sapUiRespGrid:first-of-type {padding: 0;}
 .sapUxAPObjectPageSection.sapUiNoContentPadding .sapUiRespGrid.sapUiRespGridHSpace1>div:first-of-type {margin: 0; width: 100%}
 .sapUxAPObjectPageSection.sapUiNoContentPadding {margin-bottom: 1.5rem;}
+.exf-dialog-page.exf-dialog-filled .sapUxAPObjectPageSection.sapUiNoContentPadding {margin-bottom: 0;}
 
 /* DataLookupDialog */
 .sapMDialog > .sapMDialogSection > .sapMDialogScroll {height: 100%}
